--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
       grid-area: footer;
     }
 
+    .charan{
+      
+    }
+
+    .img-class{
+      width:400px;
+      position:absolute;
+    }
+
+    .t{
+      position:relative;
+      top:20px;
+      left:130px;
+      font-size: 30px;
+      color: white;
+      font-weight: bold;
+      font-family: arial;
+    }
 
   </style>
 </head>
@@ -47,5 +65,10 @@
     <div class="item3">content</div>
     <div class="item4">footer</div>
   </div>
+
+  <div class="charan">
+    <img src="../../Anime/wallpapers/178348.jpg" class="img-class">
+    <div class="t">HELLO</div>
+  </div>
+  
 </body>
-</html>
